Fix Purge page esult items gaps, styles

--- a/src/public/less/pages/tools/purge.less
+++ b/src/public/less/pages/tools/purge.less
@@ -110,13 +110,13 @@
 			}
 
 			.btn-primary, .animated {
-				width: 112px;
+				width: 100%;
 				height: 40px;
 				font-size: 14px;
 				line-height: 20px;
 
-				@media (max-width: @screen-xs-max) {
-					width: 100%;
+				@media (min-width: @screen-sm-min) {
+					width: 112px;
 				}
 			}
 
@@ -286,13 +286,12 @@
 					.item-descr {
 						position: relative;
 						display: flex;
-						align-items: center;
-						justify-content: space-between;
+						flex-direction: column;
 
-						@media (max-width: @screen-sm-min) {
-							flex-direction: column;
-							align-items: unset;
-							justify-content: unset;
+						@media (min-width: @screen-sm-min) {
+							flex-direction: row;
+							align-items: center;
+							justify-content: space-between;
 						}
 
 						>span:nth-child(1) {
@@ -307,9 +306,10 @@
 							cursor: pointer;
 							user-select: none;
 							height: 100%;
+							margin-top: 8px;
 
-							@media (max-width: @screen-sm-min) {
-								margin-top: 8px;
+							@media (min-width: @screen-sm-min) {
+								margin: 0;
 							}
 
 							>img {
